# extinction_module

./: LICENSE  README.md  pyproject.toml
src/extinction_module/: __version__.py  modules.py
